--- a/content/resources/mit6_s897s19_lec10.md
+++ b/content/resources/mit6_s897s19_lec10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/4714b64e996e834409e4abab3628ebd7_MIT6_S897S19_lec10.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: MIT6_S897S19_lec10.pdf
 uid: 4714b64e-996e-8344-09e4-abab3628ebd7
