--- a/content/resources/mit6_s897s19_lec11.md
+++ b/content/resources/mit6_s897s19_lec11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/e50b5bb5bb192ba6b6d995af8aad0597_MIT6_S897S19_lec11.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: '6.S897 Machine Learning for Healthcare, Lecture 11: Differential Diagnosis'
 uid: e50b5bb5-bb19-2ba6-b6d9-95af8aad0597
