--- a/content/resources/mit6_s897s19_lec12.md
+++ b/content/resources/mit6_s897s19_lec12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/5b28c3a5a47a51faf2c97f17d2a8f5a1_MIT6_S897S19_lec12.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: '6.S897 Machine Learning for Healthcare, Lecture 12: Machine Learning for Pathology'
 uid: 5b28c3a5-a47a-51fa-f2c9-7f17d2a8f5a1
