--- a/content/resources/mit6_s897s19_lec19.md
+++ b/content/resources/mit6_s897s19_lec19.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/f378d1755d957d78d2f1a445e5bcba39_MIT6_S897S19_lec19.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: '6.S897 Machine Learning for Healthcare, Lecture 19: Disease progression modeling
   & subtyping, Part 2'
