--- a/content/resources/mit6_s897s19_lec20.md
+++ b/content/resources/mit6_s897s19_lec20.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/f4c352d3571d69663920eeb70162c7cf_MIT6_S897S19_lec20.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: '6.S897 Machine Learning for Healthcare, Lecture 20: Precision Medicine'
 uid: f4c352d3-571d-6966-3920-eeb70162c7cf
