--- a/content/resources/mit6_s897s19_lec22-2.md
+++ b/content/resources/mit6_s897s19_lec22-2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/8977940e33fc2a186a40ba7f4b053460_MIT6_S897S19_lec22-2.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: '6.S897 Machine Learning for Healthcare, Lecture 22.2: Human Subjects Research'
 uid: 8977940e-33fc-2a18-6a40-ba7f4b053460
