--- a/content/resources/mit6_s897s19_lec23.md
+++ b/content/resources/mit6_s897s19_lec23.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/da43f26664d8e6bf6b0ae754bd656e6a_MIT6_S897S19_lec23.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: '6.S897 Machine Learning in Healthcare, Lecture 23: Fairness'
 uid: da43f266-64d8-e6bf-6b0a-e754bd656e6a
