--- a/content/resources/mit6_s897s19_lec24.md
+++ b/content/resources/mit6_s897s19_lec24.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-s897-machine-learning-for-healthcare-spring-2019/cdeb65a44539d3ae16b439f489f0f0f0_MIT6_S897S19_lec24.pdf
 file_type: application/pdf
+parent_uid: 1d48edcc-24db-1ff9-4c54-c8ab1045e257
 resourcetype: Document
 title: '6.S897 Machine Learning for Healthcare, Lecture 24: Robustness to Data Shift'
 uid: cdeb65a4-4539-d3ae-16b4-39f489f0f0f0
